fixes stretching separated the player (jwplayer) div template from the view template (jw-main)

--- a/src/css/imports/view.less
+++ b/src/css/imports/view.less
@@ -37,7 +37,7 @@
         opacity: 0;
     }
 
-    .jw-video.jw-show-video {
+    .jw-video.jw-video-show {
         visibility: visible;
         opacity: 1;
     }
@@ -53,6 +53,22 @@
         margin: auto;
         background: transparent;
     }
+
+    /// Scale modes START
+    .jw-stretch-uniform {
+        background-size: contain !important;
+    }
+
+    .jw-stretch-fill {
+        background-position: 50% 50%;
+        background-size: cover !important;
+    }
+
+    .jw-stretch-exactfit {
+        background-size: 100% 100% !important;
+    }
+    /// Scale modes END
+
 
     // Aspect Ratio styles
     &.jw-aspect-mode:before{
